--- a/fixtures/docker-compose.yaml
+++ b/fixtures/docker-compose.yaml
@@ -153,13 +153,15 @@ services:
       - CORE_PEER_ADDRESS=peer0.org1.hf.chainhero.io:7051
       - CORE_PEER_LOCALMSPID=org1.hf.chainhero.io
       - CORE_PEER_TLS_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/var/hyperledger/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/var/hyperledger/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/var/hyperledger/tls/ca.crt
-      - CORE_PEER_MSPCONFIGPATH=/var/hyperledger/msp
+      - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.hf.chainhero.io/peers/peer0.org1.hf.chainhero.io/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.hf.chainhero.io/peers/peer0.org1.hf.chainhero.io/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.hf.chainhero.io/peers/peer0.org1.hf.chainhero.io/tls/ca.crt
+      - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org1.hf.chainhero.io/users/Admin@org1.hf.chainhero.io/msp
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: /bin/bash
     volumes:
         - /var/run/:/host/var/run/
-        - ./crypto-config/peerOrganizations/org1.hf.chainhero.io/peers/peer0.org1.hf.chainhero.io/msp:/var/hyperledger/msp
-        - ./crypto-config/peerOrganizations/org1.hf.chainhero.io/peers/peer0.org1.hf.chainhero.io/tls:/var/hyperledger/tls
+        - ./../chaincode/:/opt/gopath/src/github.com/chaincode
+        - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
+        - ./artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
+
