完善Makefile和程序

--- a/web/conf/app.conf
+++ b/web/conf/app.conf
@@ -1,6 +1,8 @@
-appname = web
+appname = heroes-service
 httpport = 8080
 runmode = dev
+copyrequestbody = true
+EnableAdmin = true
 
 mysqluser = "root"
 mysqlpass = "123456"
